--- a/charts/istio-upgrade-consumer/templates/clusterrole.yaml
+++ b/charts/istio-upgrade-consumer/templates/clusterrole.yaml
@@ -8,15 +8,6 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 rules:
-- apiGroups:
-  - authentication.k8s.io
-  resources:
-  - tokenreviews
-  verbs:
-  - create
-- apiGroups:
-  - authorization.k8s.io
-  resources:
-  - subjectaccessreviews
-  verbs:
-  - create
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["*"]
