feat: fix resources helm chart
Signed-off-by: Zufar Dhiyaullhaq <zufardhiyaulhaq@gmail.com>

--- a/charts/istio-upgrade-consumer/templates/deployment.yaml
+++ b/charts/istio-upgrade-consumer/templates/deployment.yaml
@@ -26,4 +26,5 @@ spec:
         envFrom:
         - configMapRef:
             name: {{ .Release.Name }}
+        resources: {{ .Values.resources | toYaml  | nindent 10 }}
 
