feat: fix helm chart templates
Signed-off-by: Zufar Dhiyaullhaq <zufardhiyaulhaq@gmail.com>

--- a/charts/istio-upgrade-consumer/templates/clusterrolebinding.yaml
+++ b/charts/istio-upgrade-consumer/templates/clusterrolebinding.yaml
@@ -14,4 +14,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name }}
-  namespace: {{ .Values.serviceAccount.namespace }}
+  namespace: {{ .Release.namespace }}
