--- a/charts/istio-upgrade-consumer/templates/deployment.yaml
+++ b/charts/istio-upgrade-consumer/templates/deployment.yaml
@@ -11,11 +11,11 @@ spec:
   replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels:
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app.kubernetes.io/name: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app.kubernetes.io/name: {{ .Release.Name }}
         {{- include "istio-upgrade-consumer.podlabels" . | nindent 8 }}
     spec:
       serviceAccount: {{ .Release.Name }}
