feat: change waiting time from per week to per day for production & non production
Signed-off-by: Zufar Dhiyaullhaq <zufardhiyaulhaq@gmail.com>

--- a/charts/istio-upgrade-consumer/templates/configmap.yaml
+++ b/charts/istio-upgrade-consumer/templates/configmap.yaml
@@ -15,7 +15,7 @@ data:
   STORAGE_MODE: "{{ .Values.configuration.storageMode }}"
   STORAGE_CONFIGMAP_NAME: "{{ .Values.configuration.storageConfigMapName }}"
   STORAGE_CONFIGMAP_NAMESPACE: "{{ .Values.configuration.storageConfigMapNamespace }}"
-  PRODUCTION_WAITING_WEEK: "{{ .Values.configuration.productionWaitingWeek }}"
-  NON_PRODUCTION_WAITING_WEEK: "{{ .Values.configuration.nonProductionWaitingWeek }}"
+  PRODUCTION_WAITING_DAY: "{{ .Values.configuration.productionWaitingDay }}"
+  NON_PRODUCTION_WAITING_DAY: "{{ .Values.configuration.nonProductionWaitingDay }}"
   TIME_LOCATION: "{{ .Values.configuration.timeLocation }}"
   TIME_FORMAT: "{{ .Values.configuration.timeFormat }}"
