--- a/charts/istio-upgrade-consumer/values.yaml
+++ b/charts/istio-upgrade-consumer/values.yaml
@@ -25,7 +25,7 @@ configuration:
   storageMode: "configmap"
   storageConfigMapName: "istio-auto-upgrade-config"
   storageConfigMapNamespace: "istio-system"
-  productionWaitingWeek: "4"
-  nonProductionWaitingWeek: "1"
+  productionWaitingDay: "28"
+  nonProductionWaitingDay: "7"
   timeLocation: "Asia/Jakarta"
   timeFormat: "2006-01-02"
