--- a/charts/releases/index.yaml
+++ b/charts/releases/index.yaml
@@ -2,8 +2,24 @@ apiVersion: v1
 entries:
   istio-upgrade-consumer:
   - apiVersion: v2
+    appVersion: 1.0.1
+    created: "2025-01-26T23:06:03.718824+07:00"
+    description: Consumer for Istio Upgrade tooling to receive events related to Istio
+      upgrade
+    digest: c97d7c0fed01d0acb563e5e7145df20d3cbf523e376a345649351c556469287e
+    home: https://github.com/gopaytech/istio-upgrade-consumer
+    maintainers:
+    - email: zufardhiyaulhaq@gmail.com
+      name: Zufar Dhiyaulhaq
+      url: https://zufardhiyaulhaq.com
+    name: istio-upgrade-consumer
+    type: application
+    urls:
+    - istio-upgrade-consumer-1.0.1.tgz
+    version: 1.0.1
+  - apiVersion: v2
     appVersion: 1.0.0
-    created: "2024-10-04T14:52:42.656931+07:00"
+    created: "2025-01-26T23:06:03.71858+07:00"
     description: Consumer for Istio Upgrade tooling to receive events related to Istio
       upgrade
     digest: 3f79924079765c60836a50e498a7f2de944621e6c4af3d59997e6707288689ee
@@ -17,4 +33,4 @@ entries:
     urls:
     - istio-upgrade-consumer-1.0.0.tgz
     version: 1.0.0
-generated: "2024-10-04T14:52:42.656308+07:00"
+generated: "2025-01-26T23:06:03.717076+07:00"
