--- a/.github/workflows/client_binary.yml
+++ b/.github/workflows/client_binary.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Go Release Binaries Normal Volume Size
+      - name: Release Client Binary
         uses: wangyoucao577/go-release-action@v1.53
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
